# recurse

./: .gitignore  README.md  design.md  pyproject.toml
examples/: config.example.yaml  setup_claude_code.md
recurse/: __init__.py  config.py  server.py
recurse/engine/: __init__.py  core.py  prompts.py  qwen.py  sandbox.py
recurse/hooks/: upload_session.py
recurse/store/: __init__.py  cache.py  context_store.py
recurse/tools/: __init__.py  ingest.py  query.py  status.py  threads.py
tests/: test_engine.py  test_mcp_tools.py  test_sandbox.py  test_store.py
tests/fixtures/: sample_context.txt
